@@ -81,13 +81,21 @@ endfunction(CMAKE_PARSE_ARGUMENTS _options _singleArgs _multiArgs)
 #                           [LABELS label1 label2 ...])
 #
 function(GEANT4_ADD_TEST test)
-  CMAKE_PARSE_ARGUMENTS(ARG "" "TIMEOUT;PASSREGEX;FAILREGEX;BUILD;TARGET" "COMMAND;ENVIRONMENT;DEPENDS;LABELS" ${ARGN})
+  CMAKE_PARSE_ARGUMENTS(ARG "" "TIMEOUT;PASSREGEX;FAILREGEX;BUILD;TARGET" "PRECMD;COMMAND;ENVIRONMENT;DEPENDS;LABELS" ${ARGN})
   if(ARG_BUILD)
     add_test(${test}-build make -C ${ARG_BUILD} ${ARG_TARGET})
     set(ARG_DEPENDS ${ARG_DEPENDS} ${test}-build)
-    add_test(${test} ${ARG_COMMAND})
+    if(ARG_PRECMD)
+        add_test(NAME ${test} COMMAND ${ARG_PRECMD} && ${ARG_COMMAND})
+    else()
+        add_test(NAME ${test} COMMAND ${ARG_COMMAND})
+    endif()
   else()
-    add_test(${test} ${ARG_COMMAND})
+    if(ARG_PRECMD)
+        add_test(NAME ${test} COMMAND ${ARG_PRECMD} && ${ARG_COMMAND})
+    else()
+        add_test(NAME ${test} COMMAND ${ARG_COMMAND})
+    endif()
   endif()
   if(ARG_ENVIRONMENT)
     #set_property(TEST ${test} PROPERTY ENVIRONMENT ${ARG_ENVIRONMENT})
@@ -213,7 +221,7 @@ if(GEANT4_USE_G3TOG4)
                   BINARY_DIR ${CMAKE_BINARY_DIR}/examples/extended/g3tog4/clGeometry
                   BUILD clGeometry ENVIRONMENT ${GEANT4_TEST_ENVIRONMENT})
 endif()
-foreach(_i 00 01 02 03 04 05)
+foreach(_i 00 01 02 03 04 05 06)
   GEANT4_ADD_TEST(example-ext-hadronic-hadr${_i} 
                   COMMAND ${BINDIR}/Hadr${_i} ${SRCDIR}/extended/hadronic/Hadr${_i}/hadr${_i}.in
                   BUILD ${SRCDIR}/extended/hadronic/Hadr${_i})
